// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetDataProvider full-config barusu build: asset -- image 1`] = `
Array [
  Object {
    "categories": Array [
      Array [
        "math",
        "react--context",
        "waw",
      ],
      Array [
        "200",
        "react--context",
      ],
    ],
    "createAt": "<string>",
    "fingerprint": "d85cbb58e6fad6d146139a90742163afeeedffee",
    "lastModifiedTime": "<number>",
    "location": "a.image.json",
    "tags": Array [
      "png",
      "react--image--component",
    ],
    "title": "a.image",
    "type": "image",
    "updateAt": "<string>",
    "uuid": "643297f8cb62042d714240ec6cb2190ee8586873",
  },
]
`;

exports[`AssetDataProvider full-config barusu build: categories 1`] = `
Array [
  Object {
    "assets": Array [],
    "children": Array [
      "react--context",
    ],
    "parents": Array [],
    "title": "math",
    "uuid": "math",
  },
  Object {
    "assets": Array [
      "643297f8cb62042d714240ec6cb2190ee8586873",
    ],
    "children": Array [
      "waw",
    ],
    "parents": Array [
      "math",
      "200",
    ],
    "title": "React Context",
    "uuid": "react--context",
  },
  Object {
    "assets": Array [
      "643297f8cb62042d714240ec6cb2190ee8586873",
    ],
    "children": Array [],
    "parents": Array [
      "react--context",
    ],
    "title": "waw",
    "uuid": "waw",
  },
  Object {
    "assets": Array [],
    "children": Array [
      "react--context",
    ],
    "parents": Array [],
    "title": "200",
    "uuid": "200",
  },
]
`;

exports[`AssetDataProvider full-config barusu build: console.info 1`] = `
Array [
  "clearing <PACKAGE_ROOT_DIR>/__test__/cases/full-config/barusu/data",
]
`;

exports[`AssetDataProvider full-config barusu build: tags 1`] = `
Array [
  Object {
    "assets": Array [
      "643297f8cb62042d714240ec6cb2190ee8586873",
    ],
    "title": "png",
    "uuid": "png",
  },
  Object {
    "assets": Array [
      "643297f8cb62042d714240ec6cb2190ee8586873",
    ],
    "title": "React image component",
    "uuid": "react--image--component",
  },
]
`;

exports[`AssetDataProvider full-config barusu start: console.info 1`] = `
Array [
  "rebuilding <PACKAGE_ROOT_DIR>/__test__/cases/full-config/barusu/data",
]
`;

exports[`AssetDataProvider full-config barusu start: console.info 2`] = `
Array [
  "clearing <PACKAGE_ROOT_DIR>/__test__/cases/full-config/barusu/data",
]
`;

exports[`AssetDataProvider full-config barusu start: console.info 3`] = `
Array [
  "loading <PACKAGE_ROOT_DIR>/__test__/cases/full-config/barusu/data",
]
`;

exports[`AssetDataProvider full-config barusu start: console.info 4`] = `
Array [
  "watching <PACKAGE_ROOT_DIR>/__test__/cases/full-config/barusu/source",
]
`;

exports[`AssetDataProvider full-config barusu start: console.info 5`] = `
Array [
  "closing watch mode",
]
`;
